# STT-Runner

./: .gitignore
src/cpp/: CMakeLists.txt
src/cpp/include/: STT.hpp  SttErrorMessages.hpp
src/cpp/log/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/cpp/whisper_cpp/include/: WhisperImpl.hpp
src/java/com/arm/stt/: WhisperConfig.java
test/: CMakeLists.txt
test/cpp/: SttLogTest.cpp
